--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "dayjs": "^1.10.7",
     "pinia": "^2.0.0-rc.9",
     "vue": "^3.2.6",
     "vue-router": "^4.0.11"
